<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:fillViewport="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rlRegister"
            android:background="@color/colorPrimaryDark">
            <ImageView
                android:layout_width="650dp"
                android:layout_height="625dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo"/>

            <!--This is how you can include another layout
            inside a layout file. We might need toolbar again
            and again inside our project, so we just made one separate
            layout file and then use it inside any layout file using the
            include tag-->
            <include
                android:id="@+id/toolbar"
                layout="@layout/toolbar"/>


            <EditText
                android:id="@+id/etName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/toolbar"
                android:layout_marginLeft="12dip"
                android:background="@color/colorPrimary"
                android:layout_marginTop="30dip"
                android:layout_marginRight="12dip"
                android:hint="@string/enter_name"
                android:padding="10dip"
                android:singleLine="true"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etName"
                android:background="@color/colorPrimary"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="30dip"
                android:layout_marginRight="12dip"
                android:drawablePadding="3dp"
                android:maxLines="1"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <EditText
                android:id="@+id/etPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/etEmail"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="30dip"
                android:layout_marginRight="12dip"
                android:maxLength="10"
                android:drawablePadding="3dp"
                android:maxLines="1"
                android:hint="@string/mobile_number"
                android:inputType="phone"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/etPhoneNumber"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="30dip"
                android:layout_marginRight="12dip"
                android:gravity="top"
                android:drawablePadding="3dp"
                android:hint="@string/address"
                android:padding="10dip"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:background="@color/colorPrimary"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etAddress"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="30dip"
                android:layout_marginRight="12dip"
                android:hint="@string/choose_password"
                android:inputType="numberPassword"
                android:padding="10dip"
                android:maxLength="6"
                android:drawablePadding="3dp"
                android:singleLine="true"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:layout_below="@+id/etPassword"
                android:layout_marginLeft="12dip"
                android:layout_marginTop="30dip"
                android:layout_marginRight="12dip"
                android:hint="@string/confirm_password"
                android:inputType="numberPassword"
                android:padding="10dip"
                android:singleLine="true"
                android:maxLength="6"
                android:drawablePadding="3dp"
                android:textColor="@android:color/black"
                android:textSize="16sp"/>


            <Button
                android:id="@+id/btnRegister"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/etConfirmPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="75dip"
                android:layout_marginTop="80dp"
                android:layout_marginRight="75dip"
                android:background="@color/colorPrimary"
                android:text="@string/registration"
                android:textAllCaps="false"
                android:textStyle="bold"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:textColor="@android:color/white"/>
        </RelativeLayout>

    </RelativeLayout>
</ScrollView>